# Wet1

./: AvlTree.cpp  AvlTree.h  CMakeLists.txt  main23a1.cpp  node.h  player.cpp  player.h  playerStats.cpp  playerStats.h  playerStatsDifferentOrder.cpp  playerStatsDifferentOrder.h  playerTree.cpp  playerTree.h  playerTreeGoals.cpp  playerTreeGoals.h  playerTreeId.cpp  playerTreeId.h  smalltest.in  team.cpp  team.h  teamTree.cpp  teamTree.h  worldcup23a1.cpp  worldcup23a1.h
